manifests/client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-client
  namespace: web
  labels:
    svc: client
    app: demo-man
spec:
  selector:
    matchLabels:
      app: demo-man
      svc: client
  template:
    metadata:
      labels:
        app: demo-man
        svc: client
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: github
      - name: gitlab
      containers:
      - name: client
        imagePullPolicy: Always
        image: registry.git.rwth-aachen.de/z-cloud/demo-man/client:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
