manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-man
  namespace: web
  labels:
    app: demo-man
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - demo.zoomoid.de
    secretName: demo-man-tls
  rules:
  - host: demo.zoomoid.de
    http:
      paths:
      - path: /api
        backend:
          serviceName: demo-api
          servicePort: 8080
      - path: /files
        backend:
          serviceName: demo-fileserver
          servicePort: 80
      - path: /
        backend:
          serviceName: demo-client
          servicePort: 8081
